--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 </div>
             </div>
             <div class="clock"></div>
+            <div class="current-round">Round:&nbsp;<span></span></div>
             <div class="controls">
                 <i class='bx bx-play-circle'></i>
                 <i class='bx bx-pause-circle inactive'></i>
